<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Sun">Sun</string>
    <string name="Du">°C</string>
    <string name="Du1">°</string>
    <string name="Mon_upper">MON</string>
    <string name="Tue_upper">TUE</string>
    <string name="Wed_upper">WED</string>
    <string name="Thu_upper">THU</string>
    <string name="Fri_upper">FRI</string>
    <string name="Sat_upper">SAT</string>
    <string name="Sun_upper">SUN</string>
    <string name="Monday">MONDAY</string>
    <string name="Tuesday">TUESDAY</string>
    <string name="Wednesday">WEDNESDAY</string>
    <string name="Thursday">THURSDAY</string>
    <string name="Friday">FRIDAY</string>
    <string name="Saturday">SATURDAY</string>
    <string name="Sunday">SUNDAY</string>
    <string name="Monday_upper">MONDAY</string>
    <string name="Tuesday_upper">TUESDAY</string>
    <string name="Wednesday_upper">WEDNESDAY</string>
    <string name="Thursday_upper">THURSDAY</string>
    <string name="Friday_upper">FRIDAY</string>
    <string name="Saturday_upper">SATURDAY</string>
    <string name="Sunday_upper">SUNDAY</string>
    <string name="January_upper">JAN</string>
    <string name="February_upper">FEB</string>
    <string name="March_upper">MAR</string>
    <string name="April_upper">APR</string>
    <string name="May_upper">MAY</string>
    <string name="June_upper">JUN</string>
    <string name="July_upper">JUL</string>
    <string name="August_upper">AUG</string>
    <string name="September_upper">SEP</string>
    <string name="October_upper">OCT</string>
    <string name="November_upper">NOV</string>
    <string name="December_upper">DEC</string>
    <string name="January">JAN</string>
    <string name="February">Feb</string>
    <string name="March">Mar</string>
    <string name="April">Apr</string>
    <string name="May">May</string>
    <string name="June">Jun</string>
    <string name="July">Jul</string>
    <string name="August">Aug</string>
    <string name="September">Sep</string>
    <string name="October">Oct</string>
    <string name="November">Nov</string>
    <string name="December">Dec</string>
    <string name="January_abbre">JAN</string>
    <string name="February_abbre">FEB</string>
    <string name="March_abbre">MAR</string>
    <string name="April_abbre">APR</string>
    <string name="May_abbre">MAY</string>
    <string name="June_abbre">JUN</string>
    <string name="July_abbre">JUL</string>
    <string name="August_abbre">AUG</string>
    <string name="September_abbre">SEP</string>
    <string name="October_abbre">OCT</string>
    <string name="November_abbre">NOV</string>
    <string name="December_abbre">DEC</string>
    <string name="January_abbre_qx">JANUARY</string>
    <string name="February_abbre_qx">FEBRUARY</string>
    <string name="March_abbre_qx">MARCH</string>
    <string name="April_abbre_qx">APRIL</string>
    <string name="May_abbre_qx">MAY</string>
    <string name="June_abbre_qx">JUNE</string>
    <string name="July_abbre_qx">JULY</string>
    <string name="August_abbre_qx">AUGUST</string>
    <string name="September_abbre_qx">SEPTEMBER</string>
    <string name="October_abbre_qx">OCTOBER</string>
    <string name="November_abbre_qx">NOVEMBER</string>
    <string name="December_abbre_qx">DECEMBER</string>
    <string name="Monday_XQ">MONDAY</string>
    <string name="Tuesday_XQ">TUESDAY</string>
    <string name="Wednesday_XQ">WEDNESDAY</string>
    <string name="Thursday_XQ">THURSDAY</string>
    <string name="Friday_XQ">FRIDAY</string>
    <string name="Saturday_XQ">SATURDAY</string>
    <string name="Sunday_XQ">SUNDAY</string>
    <string name="ri"></string>
    <string name="yue">-</string>
    <string name="percent">%</string>
    <string name="th">th</string>
    <string name="degree_centigrade">°C</string>
    <string name="app_name">Watch</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="options">Options</string>
    <string name="close">Dismiss</string>
    <string name="open">Open</string>
    <string name="notification_no_items">No notification</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="clockface0">Star</string>
    <string name="clockface1">Neat</string>
    <string name="clockface2">Humorous</string>
    <string name="clockface3">Scrub</string>
    <string name="clockface4">Earth</string>
    <string name="clockface5">Tyrant gold</string>
    <string name="clockface6">Ivory</string>
    <string name="clockface7">Loya</string>
    <string name="clockface8">Angel</string>
    <string name="clockface9">Love</string>
    <string name="clockface10">Goddess</string>
    <string name="clockface11">Grace</string>
    <string name="clockface12">Freedom</string>
    <string name="clockface13">Classical</string>
    <string name="clockface14">Guess</string>
    <string name="clockface15">Change</string>
    <string name="clockface16">Lady</string>
    <string name="clockface17">World</string>
    <string name="clockface18">Angel1</string>
    <string name="clockface19">Angel2</string>
    <string name="clockface20">Angel3</string>
    <string name="clockface21">Angel4</string>
    <string name="clockface22">Angel5</string>
    <string name="clockface23">Angel6</string>
    <string name="clockface24">Goddess1</string>
    <string name="clockface25">Goddess2</string>
    <string name="clockface26">Goddess3</string>
    <string name="clockface27">Goddess4</string>
    <string name="clockface28">Merry</string>
    <string name="clockface29">Loya</string>
    <string name="clockface30">Library</string>
    <string name="clockface31">Geory</string>
    <string name="clockface32">Dregon</string>
    <string name="clockface33">Messi</string>
    <string name="clockface34">Ronaldo</string>
    <string name="clockface35">Napoleon</string>
    <string name="clockface36">Columbus</string>
    <string name="clockface37">Zeus</string>
    <string name="clockface38">Athena</string>
    <string name="clockface39">Apollo</string>
    <string name="clockface40">Adam</string>
    <string name="clockface41">Hawayi</string>
    <string name="clockface42">Rain</string>
    <string name="clockface43">Eve</string>
    <string name="clockface44">Picasso</string>
    <string name="clockface45">Neymar</string>
    <string name="clockface46">Conan</string>
    <string name="clockface47">Goku</string>
    <string name="clockface48">S16_01</string>
    <string name="clockface49">S16_02</string>
    <string name="clockface50">S16_03</string>
    <string name="clockface51">S16_04</string>
    <string name="clockface52">S16_05</string>
    <string name="clockface53">S16_06</string>
    <string name="clockface54">S16_07</string>
    <string name="clockface55">S16_08</string>
    <string name="clockface56">S16_09</string>
    <string name="clockface57">Koala</string>
    <string name="clockface58">Kangaroo</string>
    <string name="clockface59">Panda</string>
    <string name="clockface60">LeDai_01</string>
    <string name="clockface61">LeDai_02</string>
    <string name="clockface62">LeDai_03</string>
    <string name="clockface63">LeDai_04</string>
    <string name="clockface64">LeDai_05</string>
    <string name="clockface66">"P.Ponlawan"</string>
    <string name="clockface67">qw_02</string>
    <string name="clockface68">qw_03</string>
    <string name="clockface69">qw_04</string>
    <string name="clockface70">"MouradooNed"</string>
    <string name="clockface71">"I.A.Sirega"</string>
    <string name="clockface72">"A.Domingos"</string>
    <string name="clockface73">James</string>
    <string name="clockface74">"S.M.Moreno"</string>
    <string name="clockface75">Maddie</string>
    <string name="clockface76">tcWatch_01</string>
    <string name="clockface77">LIFE_01</string>
    <string name="clockface78">LIFE_02</string>
    <string name="clockface79">LIFE_03</string>
    <string name="clockface80">LIFE_04</string>
    <string name="clockface81">LIFE_05</string>
    <string name="clockface82">LIFE_06</string>
    <string name="clockface83">LIFE_07</string>
    <string name="clockface84">LIFE_08</string>
    <string name="clockface85">LIFE_09</string>
    <string name="clockface86">LIFE_10</string>
    <string name="clockface_kw99_01">kw99_01</string>
    <string name="monday_abbre">MON</string>
    <string name="tuesday_abbre">TUE</string>
    <string name="wednesday_abbre">WED</string>
    <string name="thursday_abbre">THU</string>
    <string name="friday_abbre">FRI</string>
    <string name="saturday_abbre">SAT</string>
    <string name="sunday_abbre">SUN</string>
    <string name="send_info_text1">Quiet mode OFF</string>
    <string name="send_info_text2">Quiet mode ON</string>
    <string name="screenon_guesture">Raise Hand</string>
    <string name="airplane_mode">AirPlane Mode</string>
    <string name="connected_device">Device Connect</string>
    <string name="low">Low</string>
    <string name="middle">Mid</string>
    <string name="hight">Hig</string>
    <string name="brightness_setting">Brightness Level</string>
    <string name="today_counts">Today Steps</string>
    <string name="mainappimage">main app image</string>
    <string name="speech_recognize">Speech recognize</string>
    <string name="nearly_restaurant">nearly restaurant</string>
    <string name="todays_weather">"today's weather"</string>
    <string name="todays_schedule">"today's schedule"</string>
    <string name="tonight_remind_me">tonight remind me</string>
    <string name="newly_movies">newly movies</string>
    <string name="heat_news">heat news</string>
    <string name="nearby_atm">nearby ATM</string>
    <string name="nearby_hotel">nearby hotel</string>
    <string name="who_is_zbc">who is zbc</string>
    <string name="goto_airport">go to airport</string>
    <string name="talk_a_joke">talk a joke</string>
    <string name="nearby_beuty_girls">nearby beauty girls</string>
    <string name="check_tomorro_to_SHAI_tickets">check to Shanghai tickets</string>
    <string name="check_tomorro_to_fuzhous_flight">check to Fuzhou flights</string>
    <string name="set_a_10mins_countdown">set a 10mins countdown</string>
    <string name="open_stopwatch">open stopwatch</string>
    <string name="imageview_contentdescrip">this is a imageview</string>
    <string name="tip_retry">"please check watch's network"</string>
    <string name="tip_searching">"searching.."</string>
    <string name="tip_slow_net">"the network is slow, please wait.."</string>
    <string name="local_date_format">MM-dd</string>
    <string name="store_name">Store name: </string>
    <string name="store_address">Store address: </string>
    <string name="store_distance">Store distance: 32m</string>
    <string name="store_price">Store price</string>
    <string name="navigation">Navigation</string>
    <string name="phonecall">Phone call</string>
    <string name="use_phone_lookup">Use phone lookup</string>
    <string name="Packageerror">Wrong, cannot find the packages!</string>
    <string name="PackageIerror">Internal error</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="mobiledata_name">moible data</string>
    <string name="steps_string">1000</string>
    <string name="distance_unit">KM</string>
    <string name="steps_unit">STEP</string>
    <string name="step_default">0</string>
    <string name="distance_default">0.0</string>
    <string name="averg_steps_string">AVG:</string>
</resources>