<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/sports_day_bg"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingEnd="5dp"
            android:text="@string/averg_steps_string"
            android:textColor="#FFffff00"
            android:textSize="20.0sp"/>

        <TextView
            android:id="@+id/tv_averg_step"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/steps_string"
            android:textColor="#FFffffff"
            android:textSize="20.0sp"/>
    </LinearLayout>

    <com.mediatek.watchapp.MiniColumnChart
        android:id="@+id/stepDayview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_totall_step"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:paddingLeft="80dp"
            android:paddingRight="5dp"
            android:text="@string/step_default"
            android:textColor="#FFffffff"
            android:textSize="22.0sp"
            />

        <TextView
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/steps_unit"
            android:textColor="#a0ffffff"
            android:textSize="14.0sp"/>

        <TextView
            android:id="@+id/tv_totall_distance"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:paddingRight="5dp"
            android:text="@string/distance_default"
            android:textColor="#FFffffff"
            android:textSize="22.0sp"/>

        <TextView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/distance_unit"
            android:textColor="#a0ffffff"
            android:textSize="14.0sp"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/sport_target_settings"
        style="@style/quicksettings_button_style"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>
