<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >
        
        <ImageView
            android:id="@+id/notify_style"
            android:layout_width="@dimen/switch_icon_size"
            android:layout_height="@dimen/switch_icon_size"
            android:clickable="true"
            android:contentDescription="@string/send_info_text2"
            style="@style/quicksettings_button_style"
            android:src="@drawable/smart_watch_notify_send_style2_selected"/>

        <Space
            android:layout_width="12dp"
            android:layout_height="match_parent"/>
        
        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="@dimen/switch_icon_size"
            android:layout_height="@dimen/switch_icon_size"
            android:visibility="gone"
            >

            <ImageView
                android:id="@+id/low"
                android:layout_width="@dimen/switch_icon_size"
                android:layout_height="@dimen/switch_icon_size"
                style="@style/quicksettings_button_style"
                android:src="@drawable/low_icon" />

            <ImageView
                android:id="@+id/high"
                android:layout_width="@dimen/switch_icon_size"
                android:layout_height="@dimen/switch_icon_size"
                style="@style/quicksettings_button_style"
                android:src="@drawable/high_icon"/>

            <ImageView
                android:id="@+id/midd"
                android:layout_width="@dimen/switch_icon_size"
                android:layout_height="@dimen/switch_icon_size"
                style="@style/quicksettings_button_style"
                android:src="@drawable/midd_icon" />
        </FrameLayout>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/system_func_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/system_screenon_guesture"
            android:layout_width="@dimen/switch_icon_size"
            android:layout_height="@dimen/switch_icon_size"
            android:clickable="true"
            android:contentDescription="@string/screenon_guesture"
            style="@style/quicksettings_button_style"
            android:src="@drawable/smart_watch_screenon_guesture_on"/>
        <Space
            android:layout_width="12dp"
            android:layout_height="match_parent"/>
        <ImageView
            android:id="@+id/system_airplane_mode"
            android:layout_width="@dimen/switch_icon_size"
            android:layout_height="@dimen/switch_icon_size"
            android:clickable="true"
            style="@style/quicksettings_button_style"
            android:contentDescription="@string/airplane_mode"
            android:src="@drawable/smart_watch_airmode_off"/>

        <Space
            android:layout_width="12dp"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/mobile_data_settings"
            android:layout_width="@dimen/switch_icon_size"
            android:layout_height="@dimen/switch_icon_size"
            style="@style/quicksettings_button_style"
            android:clickable="true"
            android:contentDescription="@string/mobiledata_name"
            android:src="@drawable/smart_watch_mobile_data_off"/>

        <Space
            android:layout_width="12dp"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/system_connected_device"
            android:layout_width="@dimen/switch_icon_size"
            android:layout_height="@dimen/switch_icon_size"
            style="@style/quicksettings_button_style"
            android:clickable="true"
            android:contentDescription="@string/connected_device"
            android:src="@drawable/gps_off"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/bt_stat"
            android:layout_width="@dimen/switch_icon_size"
            android:layout_height="@dimen/switch_icon_size"
            style="@style/quicksettings_button_style"
            android:src="@drawable/bt_off">
        </ImageView>
        <Space
            android:layout_width="12dp"
            android:layout_height="match_parent"/>
        
        <ImageView
            android:id="@+id/wifi_status"
            android:layout_width="@dimen/switch_icon_size"
            android:layout_height="@dimen/switch_icon_size"
            style="@style/quicksettings_button_style"
            android:src="@drawable/wifi_off">
        </ImageView>
    </LinearLayout>
</RelativeLayout>
